Fixed broken post list layout on mobile (#24561)
fixes https://github.com/TryGhost/Ghost/issues/23643

- Fixed an layout issue that happens when the user collapses the sidebar
while in desktop view and then switch to mobile view and go to the posts
page. See issue above for more details.

--- a/ghost/admin/app/styles/layouts/main.css
+++ b/ghost/admin/app/styles/layouts/main.css
@@ -1184,9 +1184,11 @@ body:not(.gh-body-fullscreen) .gh-viewport {
     max-width: var(--main-layout-content-maxwidth);
 }
 
-.gh-nav-hidden + .gh-main .gh-canvas {
-    padding-left: 80px;
-    padding-right: 80px;
+@media (min-width: 800px) {
+    .gh-nav-hidden + .gh-main .gh-canvas {
+        padding-left: 80px;
+        padding-right: 80px;
+    }
 }
 
 .gh-canvas.gh-canvas-sticky {
